fix grey bar on mobile

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -258,7 +258,7 @@ dd
 
     .links
       max-height: 0px
-      overflow-y: hidden
+      overflow: hidden
       transition: max-height 0.3s
       width: 100%
 
